css/styles.css
@CHARSET "UTF-8";

@media only screen and (max-width: 1000px) {
    .twitter {
        display: none;
    }

    .primary {
    	display: none;
    }

    .secondary {
    	display: inherit;
    }
}

@media only screen and (min-width: 1000px) {
    .secondary {
    	display: none;
    }
}


body {
	margin: 0;
	padding: 0;
	text-align: center;
	background-color: #15550c !important;
}

*, *:before, *:after {
	-webkit-box-sizing: content-box !important;
	-moz-box-sizing: content-box !important;
	box-sizing: content-box !important;
}

header {
	background-color: #f5fbf5 !important
}

#top-menu {
	margin: 0;
	padding: 0;
	background-color: #f25f00;
}

#top-menu a {
	text-decoration: none;
	color: white;
	transition:.5s;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

#top-menu a:hover{
	color: #f7c31e;
	transition:.5s;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

#top-menu ul {
	list-style-type: none;
	margin: 0;
	padding: 10px;
	min-width: 450px;
}

#top-menu li {
	display: inline;
	padding: 10px;
}

main {
	//width: 744px;
	//height: 409px;
	margin: 0 auto;
	padding: 10px 0 10px 0;
	background-color: #15550c;
}

main ul {
	list-style-type: none;
}

.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
		margin: 0 auto;
		padding: 0 !important;
    text-align:left;
}

/* JSSOR Style*/

.jssora05l, .jssora05r {
    display: block;
    position: absolute;
    /* size of arrow element */
    width: 40px;
    height: 40px;
    cursor: pointer;
    background: url('../img/a17.png') no-repeat;
    overflow: hidden;
}
.jssora05l { background-position: -10px -40px; }
.jssora05r { background-position: -70px -40px; }
.jssora05l:hover { background-position: -130px -40px; }
.jssora05r:hover { background-position: -190px -40px; }
.jssora05l.jssora05ldn { background-position: -250px -40px; }
.jssora05r.jssora05rdn { background-position: -310px -40px; }

.jssort01 .p {
    position: absolute;
    top: 0;
    left: 0;
    width: 72px;
    height: 72px;
}

.jssort01 .t {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}

.jssort01 .w {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
}

.jssort01 .c {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 68px;
    height: 68px;
    border: #000 2px solid;
    box-sizing: content-box;
    background: url('../img/t01.png') -800px -800px no-repeat;
    _background: none;
}

.jssort01 .pav .c {
    top: 2px;
    _top: 0px;
    left: 2px;
    _left: 0px;
    width: 68px;
    height: 68px;
    border: #000 0px solid;
    _border: #fff 2px solid;
    background-position: 50% 50%;
}

.jssort01 .p:hover .c {
    top: 0px;
    left: 0px;
    width: 70px;
    height: 70px;
    border: #fff 1px solid;
    background-position: 50% 50%;
}

.jssort01 .p.pdn .c {
    background-position: 50% 50%;
    width: 68px;
    height: 68px;
    border: #000 2px solid;
}

* html .jssort01 .c, * html .jssort01 .pdn .c, * html .jssort01 .pav .c {
    /* ie quirks mode adjust */
    width /**/: 72px;
    height /**/: 72px;
}

/* JSSOR Style End*/

/* Tab Navigation */

ul.tabs{
	margin: 0px;
	padding: 0px;
	width: 200px;
	list-style: none;
	//background: #1c6d10;
	background: #b2ba54;
	border-radius: 5px;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

ul.tabs h4 {
	font-weight: bold;
}

ul.tabs h5 {
	font-weight: bold;
}

ul.tabs li{
	color: #15550c;
	padding: 5px 15px;
	cursor: pointer;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

ul.tabs li:hover{
	//background-color: #207f13;
	background-color: #f0f5b3;
	border-radius: 5px;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

ul.tabs li.current{
	//background: #ededed;
	background: #f0f5b3;
	color: #f25f00;
	border-radius: 5px;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

.tab-content{
	display: none;
	//background: #ededed;
	background: #f0f5b3;
	background-image: url('../img/logo-water.png');
	background-size: 300px;
	background-repeat: no-repeat;
	background-position: center;
	padding: 20px 50px 50px 50px;
	min-height: 250px;
	border-radius: 0px 10px 10px 10px;
	text-align: justify;
}

.tab-content.current{
	display: inherit;
}

.tab-content h4 {
	color: #f25f00;
	font-weight: bold;
}

/* Tab Navigation End */

/* Accordion Menu */

.panel-default {
	border: 0px !important;
	border-radius: 5px 0px 0px 5px !important;
	background: #b2ba54 !important;
	color: #15550c !important;
}

.panel-heading {
	background: #f0f5b3 !important;
	border: 0px !important;
	border-radius: 5px 0px 0px 5px !important;
	color: #f25f00 !important;
	font-weight: bold !important;
}

.panel-heading a {
	text-decoration: none !important;
}

.panel-title {
	font-weight: bold;
}

.listaServicios {
	cursor: pointer;
	padding-left: 20px;
}

.listaServicios li.current-2{
	font-weight: bold;
	color: #f25f00;
}

.tab-content-2 {
	//background: #ededed;
	display: none;
	position: relative;
	background: #f0f5b3;
	margin-bottom: 10px;
	padding: 20px 50px 60px 50px;
	min-height: 300px;
	border-radius: 0px 10px 10px 10px;
	overflow: hidden;
	text-align: justify;
}

.tab-content-2 h4 {
	color: #f25f00;
	font-weight: bold;
}

.tab-content-2 h5 {
	color: #f25f00;
	font-weight: bold;
	padding-left: 15px;
}

.tab-content-2.current-2{
	display: inherit;
}

/* Accordion Menu END */

.productImg {
	width: 230px;
	margin: 15px;
	float: right;
}

.productList {
	margin: 30px;
}

.productList li {
	padding: 5px;
	vertical-align: middle;
}

.productList a {
	color: #000;
	text-decoration: none;
	font-size: 18px;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

.productList a:hover {
	color: #f25f00;
	text-decoration: none;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

.productList a:focus {
	color: #f25f00;
}

.colors {
  width:120px;
  height:40px;
  margin: 5px;
  padding: 25px 5px 5px 5px;
  border-radius:20px;
  font-size:14px;
  color:#000;
  text-align:center;
  vertical-align: middle;
  display: inline-table;
}

.colors p {
  text-align: center;
}

.gallery {
	width: 100px;
  padding: 5px;
}

.gallery:hover{
  transform: scale(1.1);
}

.gallery2 {
	width: 500px;
  padding: 5px;
}

.gallery2:hover{
  transform: scale(1.03);
}

.tab-content-3 ul{
  list-style-type: none;
  margin: 0 auto;
  padding: 0;
  text-align: center;
  font-size: 11px;
  line-height: 0;
}

.tab-content-3 li{
  display: inline-block;
  margin: 0 auto;
  padding: 10px;
  vertical-align: top;
}

.bottomMenu {
	position: absolute;
	bottom: 20px;
	text-align: center;
	margin: 0 auto;
	width: 85%;
}

.bottomMenu ul {
	list-style-type: none;
	text-align: center;
	padding: 0;
}

.bottomMenu li {
	display: inline;
	margin: 15px;
	cursor: pointer;
	font-weight: bold;
	//color: #f25f00;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

.bottomMenu li:hover {
	color: #f25f00;
	transition: .2s;
	-o-transition: .2s;
	-ms-transition: .2s;
	-moz-transition: .2s;
	-webkit-transition: .2s;
}

.bottomMenu li.current-3{
	font-weight: bold;
	color: #f25f00;
}

.tab-content-3 {
	display: none;
}

.tab-content-3.current-3{
	display: inherit;
}

.contact {
	background: #f0f5b3;
	padding: 20px;
	border-radius: 10px;
	text-align: justify;
}

.contact h3 {
	margin: 0;
	color: #f25f00;
	font-weight: bold;
}

.logo {
	width: 120px;
	//margin: 20px;
	float: right;
}

.contactData {
	float: right;
	text-align: right;
}

.contactDataText {
	float: right;
}

.contactDataText p{
	margin: 0;
	padding: 0;
	transition:.5s;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.contactDataTextHover:hover {
	color: #f25f00;
	cursor: pointer;
	transition:.5s;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

.contactForm {
	background-color: #f0f5b3;
	padding: 30px;
	border-radius: 5px;
}

.contactForm h3 {
	font-weight: bold;
	margin-top: 10px;
	margin-bottom: 30px;
}

.form-control {
	width: 100% !important;
	margin: 0;
	padding: 0;
}

.form-group {
	text-align: center;
}

.form-group table {
	text-align: right;
	margin: 20px;
}

.form-group td{
	padding: 5px;
}


.form-text {
	height: 15px !important;
}


footer {
	background-color: #f7c31e;
	border-top: 10px solid #f25f00;
}

footer p {
	margin: 0;
	padding: 2px;
}

footer a {
	color: inherit;
	text-decoration: none !important;
	transition:.5s;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

footer a:hover{
  color: #f25f00;
  transition:.5s;
  -o-transition:.5s;
  -ms-transition:.5s;
  -moz-transition:.5s;
  -webkit-transition:.5s;
}

footer img:hover{
  transform: scale(1.1);
}

